@@ -58,13 +58,11 @@ class tx_srfeuserregister_passwordmd5 {
 	}
 
 	public function generateChallenge (&$row) {
-		global $TYPO3_DB;
-
 		$time = time();
 		$this->chal_val = md5($time . getmypid());
 		$row['password'] = '';
 		$row['chalvalue'] = $this->chal_val;
-		$tableArray = $TYPO3_DB->admin_get_tables();
+		$tableArray = $GLOBALS['TYPO3_DB']->admin_get_tables();
 
 		if (t3lib_extMgm::isLoaded('kb_md5fepw') && isset($tableArray['tx_kbmd5fepw_challenge'])) {
 			$challengeTable = 'tx_kbmd5fepw_challenge';
@@ -75,13 +73,13 @@ class tx_srfeuserregister_passwordmd5 {
 		}
 
 		if ($challengeTable != '') {
-			$res = $TYPO3_DB->exec_SELECTquery('count(*) as count', $challengeTable, 'challenge='.$TYPO3_DB->fullQuoteStr($this->chal_val, $challengeTable));
-			if (!method_exists($TYPO3_DB,debug_check_recordset) || $TYPO3_DB->debug_check_recordset($res)) {
-				$row = $TYPO3_DB->sql_fetch_assoc($res);
-				$cnt = $row['count'];
-				$TYPO3_DB->sql_free_result($res);
+			$res = $GLOBALS['TYPO3_DB']->exec_SELECTquery('count(*) as count', $challengeTable, 'challenge=' . $GLOBALS['TYPO3_DB']->fullQuoteStr($this->chal_val, $challengeTable));
+			if (!method_exists($GLOBALS['TYPO3_DB'], debug_check_recordset) || $GLOBALS['TYPO3_DB']->debug_check_recordset($res)) {
+				$challengeTableRow = $GLOBALS['TYPO3_DB']->sql_fetch_assoc($res);
+				$cnt = $challengeTableRow['count'];
+				$GLOBALS['TYPO3_DB']->sql_free_result($res);
 				if (!$cnt) {
-					$res = $TYPO3_DB->exec_INSERTquery($challengeTable, array('challenge' => $this->chal_val, 'tstamp' => $time));
+					$res = $GLOBALS['TYPO3_DB']->exec_INSERTquery($challengeTable, array('challenge' => $this->chal_val, 'tstamp' => $time));
 				}
 			}
 		}
